# APC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
AP1/: AP1_EX1.c  AP1_EX4.c
AP10/: AP10_EX1.c  AP10_EX2.c  a
AP2/: AP2_EX1.c  AP2_EX2.c  AP2_EX4.c  AP2_EX6.c
AP3/: AP3_EX5.c  AP3_EX6.c  AP3_EX7.c  a
AP4/: AP4_EX1.c  AP4_EX3.c  AP4_EX4.c  AP4_EX5.c  AP4_EX6.c  AP4_EX7.c
AP5/: AP5_EX1.c  AP5_EX2.c  AP5_EX3.c  AP5_EX5.c  AP5_EX6.c
AP6/: AP6_EX1.c  AP6_EX4.c
AP7/: AP7_EX1.c  AP7_EX2.c  AP7_EX3.c  AP7_EX4.c
AP8/: AP8_EX3.c  AP8_EX8.c
AP9/: AP9_EX4.c  AP9_EX5.c  AP9_EX6.c
APCProjeto/: 170003191_1.c  README.md  a  jogo.txt
src/: main.c
src/LISTA_01/: AP1_EX2.c  ATIVIDADE_01.c  ATIVIDADE_01.h  ATIVIDADE_01_01.c  ATIVIDADE_01_01.h  ATIVIDADE_01_02.c  ATIVIDADE_01_02.h  ATIVIDADE_01_03.c  ATIVIDADE_01_03.h  ATIVIDADE_01_04.c  ATIVIDADE_01_04.h  ATIVIDADE_01_05.c  ATIVIDADE_01_05.h  ATIVIDADE_01_06.c  ATIVIDADE_01_06.h
src/LISTA_02/: AP2_EX3.c  ATIVIDADE_02.c  ATIVIDADE_02.h  ATIVIDADE_02_01.c  ATIVIDADE_02_01.h  ATIVIDADE_02_02.c  ATIVIDADE_02_02.h  ATIVIDADE_02_03.c  ATIVIDADE_02_03.h  ATIVIDADE_02_04.c  ATIVIDADE_02_04.h  ATIVIDADE_02_05.c  ATIVIDADE_02_05.h  ATIVIDADE_02_06.c  ATIVIDADE_02_06.h  a
src/LISTA_03/: AP3_EX2.c  AP3_EX4.c  ATIVIDADE_03.c  ATIVIDADE_03.h  ATIVIDADE_03_01.c  ATIVIDADE_03_01.h  ATIVIDADE_03_02.c  ATIVIDADE_03_02.h  ATIVIDADE_03_03.c  ATIVIDADE_03_03.h  ATIVIDADE_03_04.c  ATIVIDADE_03_04.h  ATIVIDADE_03_05.c  ATIVIDADE_03_05.h  ATIVIDADE_03_06.c  ATIVIDADE_03_06.h  ATIVIDADE_03_07.c  ATIVIDADE_03_07.h
src/LISTA_04/: AP4_EX2.c  ATIVIDADE_04_05.c
src/LISTA_05/: ATIVIDADE_05_04.c  a
src/LISTA_06/: AP6_EX3.c  ATIVIDADE_06_02.c
src/LISTA_07/: ATIVIDADE_07_03.c  aplicativo
src/LISTA_08/: AP8_EX4.c  AP8_EX5.c  AP8_EX6.c  AP8_EX9.c  ATIVIDADE_08_01.c  ATIVIDADE_08_02.c  ATIVIDADE_08_07.c  ATIVIDADE_08_10.c
src/LISTA_09/: AP9_EX1.c  AP9_EX2.c  AP9_EX8.c  AP9_EX9.c  ATIVIDADE_09_03.c  ATIVIDADE_09_07.c  a
src/LISTA_10/: AP10_EX3.c
src/TESTE/: TESTE.c  TESTE.h
